@@ -7,87 +7,67 @@
                    "https://simplicityitself.artifactoryonline.com/simplicityitself/muon/"
                    :creds :gpg}]
                  ["releases" "https://simplicityitself.artifactoryonline.com/simplicityitself/repo/"]]
-  :dependencies [[org.clojure/clojure "1.7.0"]
+  :dependencies [[org.clojure/clojure "1.8.0"]
                  [http-kit "2.1.19"]
-                 [ring "1.4.0"
-                  :exclusions [org.clojure/tools.reader]]
-                 [ring/ring-json "0.4.0"
-                  :exclusions [org.clojure/tools.reader]]
+                 [ring "1.4.0" :exclusions [org.clojure/tools.reader]]
+                 [ring/ring-json "0.4.0"]
                  [tranchis/photon-db "0.9.31"]
                  [org.clojure/tools.logging "0.3.1"]
-                 [tranchis/core.async "0.3.0-20151110.100912-1"]
+                 [org.clojure/core.async "0.2.374"]
                  [org.marianoguerra/clj-rhino "0.2.2"
                   :exclusions [org.mozilla/rhino]]
                  [cheshire "5.5.0"]
                  [clj-time "0.11.0"]
-                 [compojure "1.4.0"
-                  :exclusions [org.clojure/tools.reader
-                               commons-codec]]
+                 [compojure "1.4.0" :exclusions [commons-codec]]
                  [serializable-fn "1.1.4"]
                  [tranchis/photon-config "0.9.32"]
                  [io.muoncore/muon-clojure "6.4-20160119133830"]
-                 [prismatic/schema "1.0.3"]
+                 [prismatic/schema "1.0.4"]
                  [metosin/ring-http-response "0.6.5"
-                  :exclusions [org.clojure/tools.reader]]
-                 [tranchis/compojure-api "0.24.1"
-                  :exclusions [org.clojure/core.memoize
-                               com.cognitect/transit-clj
+                  :exclusions [potemkin]]
+                 [metosin/compojure-api "1.0.0-RC1"]
+                 [dire "0.5.4"]
+                 [jarohen/chord "0.7.0"
+                  :exclusions [org.clojure/tools.reader
                                com.cognitect/transit-java
-                               org.clojure/tools.reader
-                               org.clojure/test.check
-                               org.clojure/core.cache
-                               org.clojure/data.priority-map]]
-                 [dire "0.5.3"]
-                 [jarohen/chord "0.6.0"
-                  :exclusions [commons-codec
-                               org.clojure/core.async
-                               com.cognitect/transit-clj
                                com.cognitect/transit-cljs
-                               com.cognitect/transit-java
-                               org.clojure/tools.reader]]
-                 [org.slf4j/slf4j-log4j12 "1.7.12"]
+                               com.cognitect/transit-clj]]
+                 [org.slf4j/slf4j-log4j12 "1.7.14"]
                  [tranchis/clj-schema-inspector "0.4.0"]
-                 [com.stuartsierra/component "0.3.0"]
+                 [com.stuartsierra/component "0.3.1"]
                  ;; clojurescript
-                 [org.clojure/clojurescript "1.7.170"
-                  :exclusions [org.clojure/tools.reader]]
+                 [org.clojure/clojurescript "1.7.228"]
                  [tailrecursion/cljson "1.0.7"]
-                 [cljs-http "0.1.37"
-                  :exclusions [com.cognitect/transit-cljs
-                               org.clojure/core.async]]
+                 [cljs-http "0.1.39"]
                  [org.omcljs/om "1.0.0-alpha23"]
                  [jayq "2.5.4"]
-                 [fipp "0.6.2"]
-                 [reagent-utils "0.1.4"]
+                 [fipp "0.6.4"]
+                 [reagent-utils "0.1.7"]
                  ;; photon plugins
-                 [io.github.lukehutch/fast-classpath-scanner "1.9.7"]
-                 [congomongo "0.4.6"]
+                 [io.github.lukehutch/fast-classpath-scanner "1.9.17"]
+                 [congomongo "0.4.7"]
                  #_[tranchis/photon-riak "0.9.31"]
                  [tranchis/photon-cassandra "0.9.41"
-                  :exclusions [org.clojure/tools.reader
-                               com.taoensso/encore]]
+                  :exclusions [com.taoensso/encore]]
                  [tranchis/photon-hazelcast "0.9.40"
-                  :exclusions [com.cognitect/transit-clj]]
+                  :exclusions [com.fasterxml.jackson.core/jackson-annotations
+                               com.fasterxml.jackson.core/jackson-databind]]
                  [tranchis/photon-redis "0.9.40"]
                  #_[tranchis/photon-mongo "0.9.31"]
                  [tranchis/photon-file "0.9.31"
-                  :exclusions [commons-codec
-                               org.clojure/tools.reader
-                               com.cognitect/transit-clj]]]
+                  :exclusions [com.fasterxml.jackson.core/jackson-annotations
+                               com.fasterxml.jackson.core/jackson-databind]]]
   :ring {:handler photon.core/figwheel-instance
          :init photon.core/figwheel-init!}
   :plugins [[lein-cljsbuild "1.1.1"]
             [lein-midje "3.1.3"]
             [lein-ring "0.9.7"]
-            [lein-figwheel "0.5.0-1"
+            [lein-figwheel "0.5.0-6"
              :exclusions [org.clojure/clojure
                           org.codehaus.plexus/plexus-utils]]]
   :main photon.core ;; http-kit
   #_#_:warn-on-reflection true
-  :jvm-opts [#_"-Xmx4g"
-             #_"-XX:+PrintGCDetails"
-             #_"server"
-             "-dsa" "-d64" "-da" "-XX:+UseConcMarkSweepGC"
+  :jvm-opts ["-dsa" "-d64" "-da" "-XX:+UseConcMarkSweepGC"
              "-XX:+UseParNewGC" "-XX:ParallelCMSThreads=4"
              "-XX:+ExplicitGCInvokesConcurrent"
              "-XX:+CMSParallelRemarkEnabled"
@@ -117,6 +97,6 @@
            :build-dir  "target"}
   :aot :all
   :profiles
-  {:repl {:dependencies [[midje "1.7.0"]]}
+  {:repl {:dependencies [[midje "1.8.3"]]}
    :dev {:dependencies [[javax.servlet/servlet-api "2.5"]
                         [ring-mock "0.1.5"]]}})
